--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>ERP by deksden</h1>
 <a href="/erp/products">Products</a>
+<a href="/erp/resources">Resources</a>
 <script>
 
   /* setTimeout(function () {
