- (enh) server: new routes/views/controllers - erp/orders, erp/config - (enh) server: config switching via erp/config/:id - (enh) package version bump

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,8 +6,18 @@
 </head>
 <body>
 <h1>ERP by deksden</h1>
-<a href="/erp/products">Products</a>
-<a href="/erp/resources">Resources</a>
+    <p>
+        <a href="/erp/products">Products</a>
+    </p>
+    <p>
+        <a href="/erp/resources">Resources</a>
+    </p>
+    <p>
+        <a href="/erp/orders">Orders</a>
+    </p>
+    <p>
+        <a href="/erp/config">Config</a>
+    </p>
 <script>
 
   /* setTimeout(function () {
